# code-reviewer_by_using_VS_Code_and_mimo_AI-Public

./: README.md  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  model_wrapper.rs
